[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/marshmallow.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/choco-berries.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/sugar.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/cracker.png" type="Texture" id=4]
[ext_resource path="res://ui/hud/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/dialogue-box.png" type="Texture" id=6]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 712.47
margin_top = 10.1913
margin_right = 1013.47
margin_bottom = 88.1913
texture = ExtResource( 6 )
region_rect = Rect2( -0.213997, -0.411523, 32.1317, 32.7901 )
patch_margin_left = 11
patch_margin_top = 13
patch_margin_right = 11
patch_margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NinePatchRect"]
position = Vector2( 32.1313, 28.3005 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="NinePatchRect"]
position = Vector2( 188.003, 28.3005 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="NinePatchRect"]
position = Vector2( 111.156, 28.3005 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="NinePatchRect"]
position = Vector2( 267.398, 28.3005 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="NumCrackers" type="RichTextLabel" parent="NinePatchRect"]
anchor_top = -0.000416565
anchor_bottom = -0.000416565
margin_left = 22.6362
margin_top = 51.2124
margin_right = 71.6362
margin_bottom = 86.2124
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumChocoBerries" type="RichTextLabel" parent="NinePatchRect"]
anchor_top = -0.000416565
anchor_bottom = -0.000416565
margin_left = 99.0773
margin_top = 51.2124
margin_right = 148.077
margin_bottom = 86.2124
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumSugar" type="RichTextLabel" parent="NinePatchRect"]
anchor_top = -0.000416565
anchor_bottom = -0.000416565
margin_left = 178.169
margin_top = 51.2124
margin_right = 227.169
margin_bottom = 86.2124
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumMarshmallows" type="RichTextLabel" parent="NinePatchRect"]
anchor_top = -0.000416565
anchor_bottom = -0.000416565
margin_left = 256.971
margin_top = 51.2124
margin_right = 305.967
margin_bottom = 86.2124
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}
